feat: upgrade eslint and fix the new lint errors

--- a/src/app/core/components/Sidenav/SidenavItem/SidenavItem.scss
+++ b/src/app/core/components/Sidenav/SidenavItem/SidenavItem.scss
@@ -16,7 +16,7 @@
           content: "";
           width: 1px;
           height: 16px;
-          bottom: 12;
+          bottom: 12px;
           right: 0%;
 
           @apply absolute bg-primary;
