--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,10 @@
 @import url('./assets/fonts/InstrumentSans/font.css');
 
-// @tailwind base;
+/* @tailwind base; */
+
 @tailwind components;
-// @tailwind utilities;
+
+/* @tailwind utilities; */
 
 /* COLORS */
 
